Finalizing Website: - Added Footer - Changed the Status of some projects - Added another 'project' - Fixed Underline in introduction text changing colors when selected - Changed Scrollbar

--- a/src/Styling/Content.scss
+++ b/src/Styling/Content.scss
@@ -18,3 +18,10 @@
   border-radius: 10px;
   width: 90%;
 }
+
+#projects {
+  padding-bottom: 150px;
+  .project:last-child {
+    margin: 0 auto !important;
+  }
+}
