--- a/src/Styling/colours.scss
+++ b/src/Styling/colours.scss
@@ -3,3 +3,4 @@ $lgtblue: #007cc7;
 $lgtstblue: #4da8da;
 $shadow-dblue: #203647;
 $shadow-lgtblue: #eefbfb;
+$scroll-hover: #192b38;
