--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 
   font-family: "Roboto", sans-serif;
-  color: white;
+  color: $shadow-lgtblue;
 }
 
 p,
@@ -24,9 +24,33 @@ img {
 
 body {
   background-color: $lgtblue;
+  position: relative;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
 .notBlueSelect::selection,
 .notBlueSelect *::selection {
   background: $dblue;
+  text-decoration-color: inherit;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: $lgtstblue;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $shadow-dblue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $scroll-hover;
 }
